---
source: compiler-core/src/fsharp/tests/docs.rs
expression: "\n/// This is a doc comment\n/// on multiple lines\n@deprecated(\"Use new_function instead\")\nfn other() {\n  Nil\n}\n\npub fn foo() {\n  other()\n}\n"
---
module rec my.``mod``
/// This is a doc comment
/// on multiple lines
[<System.Obsolete("Use new_function instead")>]
let private other () = begin
    ()
end
let foo () = begin
    other()
end
